--- a/.github/workflows/Create_zip_archive.yml
+++ b/.github/workflows/Create_zip_archive.yml
@@ -17,5 +17,7 @@ jobs:
       run: |
          git config --global user.name '${{ secrets.git_username }}'
          git config --global user.email '${{ secrets.git_email }}'
+         git init
+         git add -A
          git commit -am "Create new ZIP archive release"
-         git push
+         git push -u origin dev
