--- a/.github/workflows/Create_zip_archive.yml
+++ b/.github/workflows/Create_zip_archive.yml
@@ -4,13 +4,17 @@ jobs:
  build:
     runs-on: windows-latest
     steps:
+    - uses: actions/checkout@v2
+    - name: Create report file
+      run: date +%s > report.txt
+       
     - uses: actions/checkout@master
     - name: Archive Release
       uses: thedoctor0/zip-release@main
       with:
         type: 'zip'
         filename: 'release-$GITHUB_REF_NAME.zip'
-        exclusions: '*.git* ./build/ README.md'
+        exclusions: '*.git* ./build/ README.md report.txt'
         
     - name: Move to "build" directory
       run: move /y D:\a\Samsung-Game-Services-Installer\Samsung-Game-Services-Installer\release-$GITHUB_REF_NAME.zip D:\a\Samsung-Game-Services-Installer\Samsung-Game-Services-Installer\build\
