--- a/.github/workflows/Create_zip_archive.yml
+++ b/.github/workflows/Create_zip_archive.yml
@@ -32,4 +32,4 @@ jobs:
          git init
          git add -A
          git commit -am "Create new ZIP archive release"
-         git push -u origin dev
+         git push -u origin ${{ github.ref_name }}
