--- a/.github/workflows/Create_zip_archive.yml
+++ b/.github/workflows/Create_zip_archive.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
          git config --global user.name '${{ secrets.git_username }}'
          git config --global user.email '${{ secrets.git_email }}'
+         git config --global user.signingkey '${{ secrets.git_keyid }}'
          git init
          git add -A
          git commit -S -am "Create new ZIP archive release"
